--- a/content/1.getting-started/1.onboarding.md
+++ b/content/1.getting-started/1.onboarding.md
@@ -18,7 +18,7 @@ Download Msty
 Supported platforms: Windows, Mac, Linux.
 ::
 
-::alert{type="info" icon="solar:info-circle-linear"}
+::alert{type="info" icon="tabler:info-circle"}
   Once you have Msty installed and open, you can use **any** of the following steps to complete the onboarding.
 ::
 
@@ -88,7 +88,7 @@ Msty currently supports the following online model providers:
   ::  
 ::
 
-::alert{type="info" icon="solar:info-circle-linear"}
+::alert{type="info" icon="tabler:info-circle"}
   You may need to obtain the appropriate API key from your model provider to use its models in Msty.
 ::
 
