--- a/content/2.how-to guides/2.use-existing-ollama-models.md
+++ b/content/2.how-to guides/2.use-existing-ollama-models.md
@@ -1,6 +1,6 @@
 ---
 title: Use existing Ollama Models
-description: Learn how to use your existing Ollama models with Msty
+description:  
 ---
 
 Msty can share models download location with Ollama. This allows you to use the models that you have already downloaded prior to installing Msty on your computer, as well as continue using them with Ollama if necessary.
@@ -42,7 +42,7 @@ Ollama models are generally located under:
     ::
 ::
 
-::alert{type="info" icon="solar:info-circle-linear"}
+::alert{type="info" icon="tabler:info-circle"}
 If you changed your Ollama models path using the `OLLAMA_MODELS` environment variable, then you'll need to use the path you set instead of the default locations mentioned above.
 ::
 
