--- a/content/2.how-to guides/1.download-offline-models.md
+++ b/content/2.how-to guides/1.download-offline-models.md
@@ -1,6 +1,6 @@
 ---
 title: Download Offline Models
-description: Learn how to download offline models in Msty
+description:  
 ---
 
 Msty lets you download a wide variety of models to use offline with Local AI. You can choose to install any model from Ollama or import supported `gguf` model files from HuggingFace, directly within Msty.
