--- a/content/2.how-to guides/2.use-existing-ollama-models.md
+++ b/content/2.how-to guides/2.use-existing-ollama-models.md
@@ -1,6 +1,6 @@
 ---
 title: Use existing Ollama Models
-description:  
+description: Learn how to use your existing Ollama models with Msty
 ---
 
 Msty can share models download location with Ollama. This allows you to use the models that you have already downloaded prior to installing Msty on your computer, as well as continue using them with Ollama if necessary.
