--- a/content/2.how-to guides/3.ignore files and folders in Knowledge Stack.md
+++ b/content/2.how-to guides/3.ignore files and folders in Knowledge Stack.md
@@ -1,6 +1,6 @@
 ---
 title: Ignore files and folders in Knowledge Stack
-description:  
+description: Learn how to use .mstyignore to exclude files and folders from your knowledge stack
 ---
 
 The `.mstyignore` file is a powerful tool allows you to specify which files and folders should be ignored when composing your knowledge stack. By using `.mstyignore`, you can streamline your knowledge base, exclude unnecessary files, and maintain a cleaner, more focused stack.
