--- a/content/2.how-to guides/4.set safety settings when using Gemini models.md
+++ b/content/2.how-to guides/4.set safety settings when using Gemini models.md
@@ -34,7 +34,7 @@ safety.
 ## Setting Safety Settings in Msty
 
 Msty doesn't have a UI to set safety settings for Gemini models. However, you can set safety settings using
-the `safety_settings` parameter as a extra model parameters. Here's an example of how you can set safety settings when
+the `safetySettings` parameter as a extra model parameters. Here's an example of how you can set safety settings when
 using a Gemini model in Msty:
 
 1. Click on Model Options icon next to model selector and below the chat input.
@@ -45,7 +45,7 @@ using a Gemini model in Msty:
 
 ```json
 {
-"safety_settings": 
+"safetySettings": 
     [
         {
             "category": "HARM_CATEGORY_NAME",
@@ -57,13 +57,13 @@ using a Gemini model in Msty:
 
 4. Replace "HARM_CATEGORY_NAME" with the specific category you want to adjust.
 5. Replace "THRESHOLD_LEVEL" with the desired threshold level.
-6. You can add multiple categories by including additional objects in the "safety_settings" array.
+6. You can add multiple categories by including additional objects in the "safetySettings" array.
 
 Example:
 
 ```json
 {
-  "safety_settings": [
+  "safetySettings": [
     {
       "category": "HARM_CATEGORY_HARASSMENT",
       "threshold": "BLOCK_MEDIUM_AND_ABOVE"
@@ -75,6 +75,10 @@ Example:
     {
       "category": "HARM_CATEGORY_SEXUALLY_EXPLICIT",
       "threshold": "BLOCK_LOW_AND_ABOVE"
+    },
+    {
+      "category": "HARM_CATEGORY_DANGEROUS_CONTENT",
+      "threshold": "BLOCK_NONE"
     }
   ]
 }
