--- a/content/1.getting started/1.onboarding.md
+++ b/content/1.getting started/1.onboarding.md
@@ -92,7 +92,7 @@ Msty currently supports the following online model providers:
   You may need to obtain the appropriate API key from your model provider to use its models in Msty.
 ::
 
-In addition to the providers mentioned above, Msy also supports models from any Open AI compatible endpoints.
+In addition to the providers mentioned above, Msty also supports models from any Open AI compatible endpoints.
 
 ## Continue with Ollama models (advanced)
 Use this option if you have already downloaded models through Ollama and would like to use them with Msty. This will set Msty's model path location to where Ollama saves its models on your computer.
