howto: network access

--- a/content/2.how-to guides/4.set safety settings when using Gemini models.md
+++ b/content/2.how-to guides/4.set safety settings when using Gemini models.md
@@ -39,7 +39,7 @@ using a Gemini model in Msty:
 
 1. Click on Model Options icon next to model selector and below the chat input.
 2. Open the `Advanced Options` section and locate the `Extra Model Parameters` field at the bottom of the options.
-::image-plain{src="/how-to/gemini-safety-settings/model-options.png" alt="Gemini safety settings in Msty model options"}
+::image-plain{src="/how-to/gemini-safety-settings/model-options.webp" alt="Gemini safety settings in Msty model options"}
 ::
 3. In this field, you'll enter a JSON object to configure the safety settings. Use the following structure:
 
