docs: how to use sambanova models

--- a/content/2.how-to guides/2.find-api-keys.md
+++ b/content/2.how-to guides/2.find-api-keys.md
@@ -1,5 +1,5 @@
 ---
-title: Find API keys
+title: Find API Keys
 description: Learn how to find API keys for various Online AI services
 ---
 
@@ -82,6 +82,14 @@ API keys are required to access the services provided by Online AI services. Her
 * **Key Visibility:** Anytime
 * **Usage Dashboard:** https://api.together.xyz/settings/billing
 * **Token Pricing Information:** https://api.together.xyz/models
+
+## **SambaNova**
+
+* **API Endpoint:** `https://api.sambanova.ai/v1`
+* **API Key URL:** https://cloud.sambanova.ai/apis
+* **Key Visibility:** Only Once
+* **Usage Dashboard:** https://cloud.sambanova.ai/usage
+* **Token Pricing Information:** https://cloud.sambanova.ai/pricing
 
 
 (Special thanks to our Discord community member, Frewtloops, for compiling this list!)
