--- a/content/1.getting started/2.gpus-support.md
+++ b/content/1.getting started/2.gpus-support.md
@@ -1,5 +1,5 @@
 ---
-title: GPU Supported by Msty
+title: GPUs Supported by Msty
 description: Msty supports a wide range of GPUs for faster inference. Check if your GPU is supported by Msty.
 ---
 
