--- a/content/1.getting started/2.gpu-support.md
+++ b/content/1.getting started/2.gpu-support.md
@@ -3,9 +3,7 @@ title: GPU Supported by Msty
 description: Msty supports a wide range of GPUs for faster inference. Check if your GPU is supported by Msty.
 ---
 
-# GPU
-
-## Nvidia
+## Nvidia GPUs
 
 Msty (and Ollama, the underlying Local AI engine) supports Nvidia GPUs with compute capability 5.0+.
 
@@ -53,7 +51,7 @@ your NVIDIA GPU, and fallback to running on the CPU. You can work around this
 driver bug by reloading the NVIDIA UVM driver with `sudo rmmod nvidia_uvm &&
 sudo modprobe nvidia_uvm`
 
-## AMD Radeon
+## AMD Radeona GPUs
 
 Msty/Ollama supports the following AMD GPUs:
 
