--- a/content/3.troubleshooting/3.amd-rocm-windows-issues.md
+++ b/content/3.troubleshooting/3.amd-rocm-windows-issues.md
@@ -38,8 +38,7 @@ with the model. This value can even be set per chat.
 ::image-plain{src="/getting-started/gpu-model-config.webp" alt="You can pass extra params to a model globally"}
 ::
 
-::image-plain{src="/getting-started/model-extra-configs.webp" alt="You can pass extra params (A) per chat (B) or per
-model (B)"}
+::image-plain{src="/getting-started/model-extra-configs.webp" alt="You can pass extra params (A) per chat (B) or per model (B)"}
 ::
 
 ## Custom Ollama Build
