tweak: onboarding page

--- a/content/0.getting started/1.onboarding.md
+++ b/content/0.getting started/1.onboarding.md
@@ -3,98 +3,49 @@ title: Onboarding
 description: Get started with Msty in a few easy steps
 ---
 
-If you haven't downloaded Msty already, get started by downloading it first.
+Welcome to Msty! Setting up is simple and quick. Follow the steps below to get started with local AI models, connect to remote providers, or use pre-existing models.
 
-::card
----
-to: https://msty.app?ref=docs
-target: \_blank
----
+::steps
+  ### Choose an onboarding option
+  When you first open Msty, you will be greeted by the onboarding page. This page offers three primary setup options:
+  ::tabs
+    ::div{label="Setup Local AI" icon="tabler:device-desktop-down"}
+      #### Setup Local AI
+      This option will download and install a local AI model on your machine.
+      - By default, Msty will download Google’s Gemma 2 model, which requires approximately 1.6 GB of disk space.  
+      - You can also click on the **'Gemma 2'** label to reveal a dropdown menu that allows you to select a different AI model for downloading during onboarding.
 
-#title
-Download Msty
+      Once you’ve selected a local AI model, the system will begin downloading and installing it. This process may take some time depending on your internet speed and the model size.
 
-#content
-Supported platforms: Windows, Mac, Linux.
+      ::alert{type="info" icon="tabler:info-circle"}
+      Note: If you onboarded with `Setup Local AI` and want to switch to using models from Ollama, see [how to use existing Ollama models](/how-to-guides/use-existing-ollama-models) in Msty.
+      ::
+    ::
+
+    ::div{label="Add Remote Models Provider" icon="tabler:world-bolt"}
+      #### Add Remote Models Provider
+      This option allows you to quickly onboard with a variety of remote AI models. To do so, simply enter the [API key](/how-to-guides/find-api-keys) for your chosen provider and select the desired models. Available providers include:  
+      - Open AI  
+      - Azure Open AI :aurum-tag
+      - Claude  
+      - Perplexity  
+      - Google Gemini  
+      - Mistral AI  
+      - Groq AI  
+      - Open Router  
+      - Any other Open AI compatible models provider
+    ::
+
+    ::div{label="Use Ollama Models (Advanced)" icon="simple-icons:ollama"}
+      #### Use Ollama Models (Advanced)
+      For advanced users who have Ollama installed, Msty will automatically detect it and allow you to continue with them during onboarding. This enables you to onboard using your **existing models**, providing an even faster setup experience.
+    ::
+  ::
+
+  ::image-plain{src="/getting-started/installation/onboarding.webp" alt="Onboarding options in Msty"}
+  ::
+
+  ### Start chatting
+  After the setup is complete, you will be redirected to the chats page, where you can begin chatting with the AI model(s) you've just set up.
+
 ::
-
-::alert{type="info" icon="tabler:info-circle"}
-  Once you have Msty installed and open, you can use **any** of the following steps to complete the onboarding.
-::
-
-::image-card{src="/getting-started/msty-onboarding-page.webp" alt="Msty Onboarding Page"}
-::
-
-## Setup Local AI
-Use this option if you would like to use offline models and want Msty to manage them for you.
-
-By default, Tiny Dolphin model (637MB) is selected for download due to its small size. You can also select a different model to onboard with that befits your system specifications.
-
-## Add remote model providers (optional)
-Use this option if you would like to use models from online providers.
-
-Msty currently supports the following online model providers:
-
-<br />
-
-::card-group
-  ::card
-  ---
-  title: Open AI
-  icon: tabler:brand-openai
-  ---
-  ::
-
-  ::card
-  ---
-  title: Mistral
-  icon: logos:mistral-ai-icon
-  ---
-  ::
-
-  ::card
-  ---
-  title: Anthropic (Claude)
-  icon: logos:anthropic-icon
-  ---
-  ::
-
-  ::card
-  ---
-  title: Google Gemini
-  icon: simple-icons:googlegemini
-  ---
-  ::
-
-  ::card
-  ---
-  title: Perplexity
-  icon: simple-icons:perplexity
-  ---
-  ::
-
-  ::card
-  ---
-  title: Open Router
-  icon: icon-park-outline:right-branch-two
-  ---
-  ::
-
-  ::card
-  ---
-  title: Groq
-  icon: arcticons:letter-lowercase-circle-g
-  ---
-  ::  
-::
-
-::alert{type="info" icon="tabler:info-circle"}
-  You may need to obtain the appropriate API key from your model provider to use its models in Msty.
-::
-
-In addition to the providers mentioned above, Msty also supports models from any Open AI compatible endpoints.
-
-## Continue with Ollama models (advanced)
-Use this option if you have already downloaded models through Ollama and would like to use them with Msty. This will set Msty's model path location to where Ollama saves its models on your computer.
-
-Note: If you are onboarded with Local AI already and want to switch to using models from Ollama, you can read [how to use existing Ollama models](/how-to/use-existing-ollama-models) in Msty.
